Add pictures of skeletons and infos on them

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -50,11 +50,35 @@
  note = {Neu hrsg. und gekürzte Fass. der Ausg. Cambridge 1966}
 }
 
-	
-	
-	
-	
-	
-		
-		
-	
+@book{Spezielle_Zoologie,
+ title = {Spezielle Zoologie. Teil 2: Wirbel- oder Schädeltiere},
+ author = {Westheide, Wilfried and Rieger, Reinhard},
+ year = {2004},
+ isbn = {3-8274-0307-3},
+}
+
+@book{Zoologie25Wehner,
+ title = {Zoologie},
+ author = {Wehner, Rüdiger and Gehring, Walter},
+ edition = {25},
+ year = {2013},
+ isbn = {978-3-13-367425-6}
+}
+
+@book{Zoologie24Wehner,
+ title = {Zoologie},
+ author = {Wehner, Rüdiger and Gehring, Walter},
+ edition = {24},
+ year = {2007},
+ isbn = {978-3-13-367424-9}
+}
+
+@book{ZoologieHickman,
+ title = {Zoologie},
+ author = {Hickman, Cleveland P. and Roberts, Larry S. and Larson, Allan and l'Anson, Helen and Eisenhour, David J.},
+ edition = {13},
+ year = {2008},
+ isbn = {978-3-8273-7265-9}
+}
+
+
