--- a/latex/content.tex
+++ b/latex/content.tex
@@ -153,9 +153,52 @@
  %- - - - - - - - - - - - - - - - - 
  \subsection{Erhobene Daten für PCA}
  
+ Flossen werden weder als Beine (egal ob mit oder ohne Bodenkontakt) noch als Flügel angesehen. \todo{sinnvoll?}
+ 
+ \subsubsection{Skelettbilder}
+ \begin{itemize}
+  \item die meisten Bilder aus \cite{Spezielle_Zoologie}
+  \item Sinornis und Taube aus \cite{Vergleichende_Anatomie}
+  \item Seekuh aus \cite{Zoologie25Wehner}
+  \item Archaeopteryx, Eusthenopteron, Ichthyosaurus, Ichthyostega, Muraenosaurus, Urpferdchen aus \cite{Zoologie24Wehner}
+  \item Pferd: \url{https://www.kosmos.de/content/buecher/ratgeber/pferde-reiten/vorwaerts-abwaerts-eine-frage-der-haltung/}
+ \end{itemize}
+
+ 
+ \subsubsection{Gewicht}
  \begin{itemize}
   \item Gewicht: Durchschnittsgewicht eines ausgewachsenen Tieres in kg. Schwerstes Tier: Blaubwal, Maximum ist also 120 Tonnen \url{http://tierdoku.com/index.php?title=Blauwal}
   \item Durschnittsgewicht (Warmblut-)Pferd: 600 kg \url{https://www.reitarena.com/de/blog/blog-post/2015/03/03/das-pferd-grundlegende-fakten.html}
+  \item Afrikanischer Elefant 4000kg: \url{https://de.upali.ch/gewicht-und-grosse/}
+  \item Amerikanischer Flussbarsch 2kg: \url{http://tierdoku.com/index.php?title=Amerikanischer_Flussbarsch}
+  \item Archaeopteryx wird zu Vögeln gerechnet, Gewicht 1kg \url{https://de.wikipedia.org/wiki/Archaeopteryx}
+  \item Brachiosaurus (Reptil \url{http://www.biologie-schule.de/brachiosaurus-steckbrief.php}), 23 - 44 Tonnen \url{https://de.wikipedia.org/wiki/Brachiosaurus}
+  \item Dimetrodon Reptil, 250kg \url{https://de.wikipedia.org/wiki/Dimetrodon}
+  \item Elster 0,2kg \url{https://de.wikipedia.org/wiki/Elster}
+  \item Forelle 10-50kg (je nach Art) \url{https://de.wikipedia.org/wiki/Forelle}
+  \item Fregattvogel 0,6 - 1,6kg \url{https://de.wikipedia.org/wiki/Fregattv\%C3\%B6gel}
+  \item Grönlandwal 50-100 Tonnen \url{https://de.wikipedia.org/wiki/Gr\%C3\%B6nlandwal}
+  \item Ichthyornis 0.3kg \url{http://dinodata.de/animals/birds/pages_i/ichthyornis.php}
+  \item Ichthyosaurus Fisch ca 90kg \url{https://www.tiere-online.de/sonstige-tiere/dinosaurier/ichthyosaurus/}
+  \item Ichthyostega 80kg \url{https://dinosaurierwelt.com/ichthyostega/}
+  \item Kaffernbüffel 350 - 900kg \url{https://de.wikipedia.org/wiki/Kaffernb\%C3\%BCffel}
+  \item Kaninchen je nach Art, grob 1kg
+  \item Klippschliefer 2-5kg \url{https://de.wikipedia.org/wiki/Klippschliefer}
+  \item Koboldmaki 0,1kg \url{https://de.wikipedia.org/wiki/Koboldmakis}
+  \item Landschildkröte unterschiedlich grob 50kg
+  \item Ohrenrobbe 25-500kg \url{https://de.wikipedia.org/wiki/Ohrenrobben}
+  \item Panzerspitzmaus 100g \url{https://de.wikipedia.org/wiki/Panzerspitzmaus}
+  \item Parasaurolophus walkeri 4-5 Tonnen \url{http://tierdoku.com/index.php?title=Parasaurolophus_walkeri}
+  \item Peloneustes philarchus 100kg \url{https://de.wikipedia.org/wiki/Peloneustes}
+  \item Pottwal bis 50 Tonnen \url{https://de.wikipedia.org/wiki/Pottwal}
+  \item Rothirsch 80-350kg \url{https://de.wikipedia.org/wiki/Rothirsch}
+  \item Seehund 100-150kg \url{https://de.wikipedia.org/wiki/Seehund}
+  \item Sinornis 20g \url{http://dinodata.de/animals/birds/pages_s/sinornis.php}
+  \item Stegosaurus 4,5 Tonnen \url{https://de.wikipedia.org/wiki/Stegosaurus}
+  \item Taube unterschiedlich grob 1-2kg
+  \item Thrinaxodon Reptil "`ein paar Pfund"' \url{https://www.thoughtco.com/thrinaxodon-1091887}
+  \item Triceratops 6-12 Tonnen \url{https://de.wikipedia.org/wiki/Triceratops}
+  \item Urpferdchen (Propalaeotherium) 30kg \url{https://de.wikipedia.org/wiki/Propalaeotherium}
  \end{itemize}
 
  
