Annotated skeletons and fixed input reading

--- a/latex/content.tex
+++ b/latex/content.tex
@@ -176,7 +176,7 @@
   \item Dimetrodon Reptil, 250kg \url{https://de.wikipedia.org/wiki/Dimetrodon}
   \item Elster 0,2kg \url{https://de.wikipedia.org/wiki/Elster}
   \item Forelle 10-50kg (je nach Art) \url{https://de.wikipedia.org/wiki/Forelle}
-  \item Fregattvogel 0,6 - 1,6kg \url{https://de.wikipedia.org/wiki/Fregattv\%C3\%B6gel}
+  \item Fregattvogel (Bild nicht verwendet, da nicht im Stand, sondern im Flug abgebildet) 0,6 - 1,6kg \url{https://de.wikipedia.org/wiki/Fregattv\%C3\%B6gel}
   \item Grönlandwal 50-100 Tonnen \url{https://de.wikipedia.org/wiki/Gr\%C3\%B6nlandwal}
   \item Ichthyornis 0.3kg \url{http://dinodata.de/animals/birds/pages_i/ichthyornis.php}
   \item Ichthyosaurus Fisch ca 90kg \url{https://www.tiere-online.de/sonstige-tiere/dinosaurier/ichthyosaurus/}
