Add more examples

--- a/latex/content.tex
+++ b/latex/content.tex
@@ -156,12 +156,23 @@
  Flossen werden weder als Beine (egal ob mit oder ohne Bodenkontakt) noch als Flügel angesehen. \todo{sinnvoll?}
  
  \subsubsection{Skelettbilder}
+ 
+ alle Bilder aus \cite{Spezielle_Zoologie} außer:
  \begin{itemize}
-  \item die meisten Bilder aus \cite{Spezielle_Zoologie}
   \item Sinornis und Taube aus \cite{Vergleichende_Anatomie}
   \item Seekuh aus \cite{Zoologie25Wehner}
   \item Archaeopteryx, Eusthenopteron, Ichthyosaurus, Ichthyostega, Muraenosaurus, Urpferdchen aus \cite{Zoologie24Wehner}
   \item Pferd: \url{https://www.kosmos.de/content/buecher/ratgeber/pferde-reiten/vorwaerts-abwaerts-eine-frage-der-haltung/}
+  \item Känguru \url{http://www.bildwoerterbuch.com/tierreich/beuteltiere/kaenguru/skelett-eines-kaengurus.php}
+  \item Schwan \url{https://www.alamy.de/skelett-eines-schwans-osteographia-oder-die-anatomie-der-knochen-london-1733-quelle-47-ich-12-kapitel-v-saitenhalter-autor-cheselden-william-image226921369.html}
+  \item Chamäleon \url{https://www.madcham.de/de/anatomie/}
+  \item Gnu \url{https://lutzmoeller.net/Afrika/2007/Lutz-Juli/8-Gnu.php}
+  \item Tyrannosaurus Rex \url{https://upload.wikimedia.org/wikipedia/commons/9/9f/Tyrannosaurus_skeleton.jpg}
+  \item Dormedar \url{https://upload.wikimedia.org/wikipedia/commons/a/ac/Camel_Skeleton_-_Richard_Owen_-_On_the_Anatomy_of_Vertebrates_\%281866\%29.jpg}
+  \item Strauß \url{https://www.scienceinschool.org/sites/default/files/articleContentImages/21/ostrich/issue21ostrich5_xl.jpg}
+  \item Blauwal \url{https://www.quagga-illustrations.de/wp-content/uploads/2014/05/h0001705.jpg}
+  \item Krokodil \url{https://de.depositphotos.com/210906852/stock-illustration-skeleton-crocodile-vintage-line-drawing.html}
+  \item Giraffe \url{https://de.wikipedia.org/wiki/Giraffen#/media/Datei:Giraffe_skeleton.jpg}
  \end{itemize}
 
  
@@ -199,6 +210,19 @@
   \item Thrinaxodon Reptil "`ein paar Pfund"' \url{https://www.thoughtco.com/thrinaxodon-1091887}
   \item Triceratops 6-12 Tonnen \url{https://de.wikipedia.org/wiki/Triceratops}
   \item Urpferdchen (Propalaeotherium) 30kg \url{https://de.wikipedia.org/wiki/Propalaeotherium}
+  \item Schwan 14kg \url{https://de.wikipedia.org/wiki/Schw\%C3\%A4ne}
+  \item Chamäleon 0,1 - 2kg \url{https://www.tierchenwelt.de/echsen/128-chamaeleon.html}
+  \item Gämse 25-50kg \url{https://de.wikipedia.org/wiki/G\%C3\%A4mse}
+  \item Gnu 140-250kg \url{https://de.wikipedia.org/wiki/Gnus}
+  \item Schwein 100kg \url{https://de.wikipedia.org/wiki/Hausschwein}
+  \item Känguru 2-90kg \url{https://de.wikipedia.org/wiki/K\%C3\%A4ngurus}
+  \item Tyrannosaurus 9 Tonnen \url{https://de.wikipedia.org/wiki/Tyrannosaurus}
+  \item Dromedar 300-700 kg \url{https://de.wikipedia.org/wiki/Dromedar}
+  \item Afrikanischer Strauß bis 135kg \url{https://de.wikipedia.org/wiki/Afrikanischer_Strau\%C3\%9F}
+  \item Frosch ca 10g \url{http://www.biologie-schule.de/frosch-steckbrief.php}
+  \item Krokodil 100-1000kg \url{https://de.wikipedia.org/wiki/Krokodile}
+  \item Schlange bis 100kg bei Riesenschlangen \url{https://de.wikipedia.org/wiki/Schlangen}
+  \item Girafffe bis 2 Tonnen \url{https://www.tierchenwelt.de/huftiere/73-giraffe.html}
  \end{itemize}
 
  
