Export unscaled original data and add gnuplot plots

--- a/latex/content.tex
+++ b/latex/content.tex
@@ -149,6 +149,8 @@
  Die Eigenvektoren dieser Kovarianzmatrix sind dann die Achsen des Ellipsoids und die zugehörigen Eigenwerte geben an wie weit ausgedehnt das Ellipsoid in dieser Richtung ist. Der Mittelpunkt des Ellipsoids ist der Mittelwert der Daten.
  
  Will man nun herausfinden was die Haupteigenschaften eines Datenpunktes sind, stellt man ihn im neuen Koordinatensystem des Ellipsoids dar, also als gewichtete Summe der Eigenvektoren, und betrachtet dann nur die Dimensionen mit den größten Eigenwerten. Dazu zieht man zunächst den Mittelwert vom Datenpunkt ab und multipliziert ihn dann mit der transponierten Basiswechselmatrix, also der Matrix, in der in den Zeilen die Eigenvektoren stehen.
+ 
+ Die Eigenwerte stellen die Varianz in Richtung des zugehörigen Eigenvektors dar. \todo{Einfügen und Beschreiben der Bilder von Eigenvektoren multipliziert mit Standardabweichung}
 
  %- - - - - - - - - - - - - - - - - 
  \subsection{Erhobene Daten für PCA}
