Split tex file for content into several files

--- a/latex/thesis.tex
+++ b/latex/thesis.tex
@@ -104,11 +104,11 @@
 %% ------------------------
 % Only files listed here will be included!
 % Userful command for partially translating the document (for bug-fixing e.g.)
-\includeonly{%
-titlepage,
-content,
-appendix
-}
+%\includeonly{%
+%titlepage,
+%content,
+%appendix
+%}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -137,7 +137,10 @@ appendix
 %% -----------------
 \mainmatter
 \pagenumbering{arabic}
-\include{content}
+\include{previous_work}
+\include{idea}
+\include{pca}
+\include{implementation_detail}
 
 
 
