More description on PCA

--- a/latex/implementation_detail.tex
+++ b/latex/implementation_detail.tex
@@ -119,3 +119,9 @@ Jedes Element im Skelett speichert, relativ zu seinem Elternelement, die Positio
  \includegraphics[width=0.6\textwidth]{graphics/transformation_matrices_spine.eps}
  \caption{Will man ein Element $k$ erzeugen, das Kindelement von $e$ ist und dessen globale Koordinaten bekannt sind, muss man die Abbildung berechnen, die die relative Position von $k$ angibt. Seien $T_1$ und $T_2$ jeweils die Transformationen in das globale Koordinatensystem von $e$ \bzw $k$. Dann ist die gesuchte Abbildung $T_1^{-1} \cdot T_2$.}
 \end{figure}
+
+
+%------------------------------------------
+\section{Annotation der Bilder für die PCA}
+
+\todo{Wie wird ausgelesen und was muss bei Inkscape im Speziellen beachtet werden (vllt als Fußnote)}
