--- a/latex/thesisclass.cls
+++ b/latex/thesisclass.cls
@@ -43,6 +43,7 @@
 \usepackage{algorithmic}	  % Code-Listings
 % see http://www.ctan.org/tex-archive/macros/latex/contrib/algorithm2e/algorithm2e.pdf
 % for more sophisticated algorithm listings
+\usepackage{amssymb} % Math Symbols
 
 \usepackage[raiselinks=true,
 						bookmarks=true,
