--- a/latex/appendix.tex
+++ b/latex/appendix.tex
@@ -111,3 +111,81 @@ Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArc
  \item Beispiele \zb S.\ 366 f, Säugetierschädel ab S.\ 371
 \end{itemize}
 
+
+%-------------------------------
+\chapter{Erhobene Daten für PCA}
+\label{appendix_pca}
+
+ 
+ \section{Skelettbilder}
+ \label{appendix_pca_skeletons}
+ 
+ alle Bilder aus \cite{Spezielle_Zoologie} außer:
+ \begin{itemize}
+  \item Sinornis und Taube aus \cite{Vergleichende_Anatomie}
+  \item Seekuh aus \cite{Zoologie25Wehner}
+  \item Archaeopteryx, Eusthenopteron, Ichthyosaurus, Ichthyostega, Muraenosaurus, Urpferdchen aus \cite{Zoologie24Wehner}
+  \item Pferd: \url{https://www.kosmos.de/content/buecher/ratgeber/pferde-reiten/vorwaerts-abwaerts-eine-frage-der-haltung/}
+  \item Känguru \url{http://www.bildwoerterbuch.com/tierreich/beuteltiere/kaenguru/skelett-eines-kaengurus.php}
+  \item Schwan \url{https://www.alamy.de/skelett-eines-schwans-osteographia-oder-die-anatomie-der-knochen-london-1733-quelle-47-ich-12-kapitel-v-saitenhalter-autor-cheselden-william-image226921369.html}
+  \item Chamäleon \url{https://www.madcham.de/de/anatomie/}
+  \item Gnu \url{https://lutzmoeller.net/Afrika/2007/Lutz-Juli/8-Gnu.php}
+  \item Tyrannosaurus Rex \url{https://upload.wikimedia.org/wikipedia/commons/9/9f/Tyrannosaurus_skeleton.jpg}
+  \item Dormedar \url{https://upload.wikimedia.org/wikipedia/commons/a/ac/Camel_Skeleton_-_Richard_Owen_-_On_the_Anatomy_of_Vertebrates_\%281866\%29.jpg}
+  \item Strauß \url{https://www.scienceinschool.org/sites/default/files/articleContentImages/21/ostrich/issue21ostrich5_xl.jpg}
+  \item Blauwal \url{https://www.quagga-illustrations.de/wp-content/uploads/2014/05/h0001705.jpg}
+  \item Krokodil \url{https://de.depositphotos.com/210906852/stock-illustration-skeleton-crocodile-vintage-line-drawing.html}
+  \item Giraffe \url{https://de.wikipedia.org/wiki/Giraffen#/media/Datei:Giraffe_skeleton.jpg}
+ \end{itemize}
+
+ 
+ \section{Gewicht der Tiere}
+ \label{appendix_pca_weight}
+ 
+ \begin{itemize}
+  \item Blauwal 120 Tonnen, \url{http://tierdoku.com/index.php?title=Blauwal}, "`das schwerste bekannte Tier der Erdgeschichte"' \url{https://de.wikipedia.org/wiki/Blauwal}
+  \item Durschnittsgewicht (Warmblut-)Pferd 600 kg, \url{https://www.reitarena.com/de/blog/blog-post/2015/03/03/das-pferd-grundlegende-fakten.html}
+  \item Afrikanischer Elefant 4000kg, \url{https://de.upali.ch/gewicht-und-grosse/}
+  \item Amerikanischer Flussbarsch 2kg, \url{http://tierdoku.com/index.php?title=Amerikanischer_Flussbarsch}
+  \item Archaeopteryx 1kg, \url{https://de.wikipedia.org/wiki/Archaeopteryx}
+  \item Brachiosaurus 23-44 Tonnen, \url{https://de.wikipedia.org/wiki/Brachiosaurus}
+  \item Dimetrodon 250kg, \url{https://de.wikipedia.org/wiki/Dimetrodon}
+  \item Elster 0,2kg, \url{https://de.wikipedia.org/wiki/Elster}
+  \item Forelle 10-50kg (je nach Art), \url{https://de.wikipedia.org/wiki/Forelle}
+  \item Grönlandwal 50-100 Tonnen, \url{https://de.wikipedia.org/wiki/Gr\%C3\%B6nlandwal}
+  \item Ichthyornis 0.3kg, \url{http://dinodata.de/animals/birds/pages_i/ichthyornis.php}
+  \item Ichthyosaurus 90kg, \url{https://www.tiere-online.de/sonstige-tiere/dinosaurier/ichthyosaurus/}
+  \item Ichthyostega 80kg, \url{https://dinosaurierwelt.com/ichthyostega/}
+  \item Kaffernbüffel 350-900kg, \url{https://de.wikipedia.org/wiki/Kaffernb\%C3\%BCffel}
+  \item Kaninchen je nach Art, ganz grob 1kg
+  \item Klippschliefer 2-5kg, \url{https://de.wikipedia.org/wiki/Klippschliefer}
+  \item Koboldmaki 0,1kg, \url{https://de.wikipedia.org/wiki/Koboldmakis}
+  \item Landschildkröte je nach Art, grob 50kg
+  \item Ohrenrobbe 25-500kg, \url{https://de.wikipedia.org/wiki/Ohrenrobben}
+  \item Panzerspitzmaus 100g ,\url{https://de.wikipedia.org/wiki/Panzerspitzmaus}
+  \item Parasaurolophus walkeri 4-5 Tonnen, \url{http://tierdoku.com/index.php?title=Parasaurolophus_walkeri}
+  \item Peloneustes philarchus 100kg, \url{https://de.wikipedia.org/wiki/Peloneustes}
+  \item Pottwal bis 50 Tonnen, \url{https://de.wikipedia.org/wiki/Pottwal}
+  \item Rothirsch 80-350kg, \url{https://de.wikipedia.org/wiki/Rothirsch}
+  \item Seehund 100-150kg, \url{https://de.wikipedia.org/wiki/Seehund}
+  \item Sinornis 20g, \url{http://dinodata.de/animals/birds/pages_s/sinornis.php}
+  \item Stegosaurus 4,5 Tonnen, \url{https://de.wikipedia.org/wiki/Stegosaurus}
+  \item Taube je nach Art, grob 1-2kg
+  \item Thrinaxodon Reptil "`ein paar Pfund"', \url{https://www.thoughtco.com/thrinaxodon-1091887}
+  \item Triceratops 6-12 Tonnen, \url{https://de.wikipedia.org/wiki/Triceratops}
+  \item Urpferdchen (Propalaeotherium) 30kg, \url{https://de.wikipedia.org/wiki/Propalaeotherium}
+  \item Schwan 14kg, \url{https://de.wikipedia.org/wiki/Schw\%C3\%A4ne}
+  \item Chamäleon 0,1-2kg, \url{https://www.tierchenwelt.de/echsen/128-chamaeleon.html}
+  \item Gämse 25-50kg, \url{https://de.wikipedia.org/wiki/G\%C3\%A4mse}
+  \item Gnu 140-250kg, \url{https://de.wikipedia.org/wiki/Gnus}
+  \item Schwein 100kg, \url{https://de.wikipedia.org/wiki/Hausschwein}
+  \item Känguru 2-90kg ,\url{https://de.wikipedia.org/wiki/K\%C3\%A4ngurus}
+  \item Tyrannosaurus 9 Tonnen, \url{https://de.wikipedia.org/wiki/Tyrannosaurus}
+  \item Dromedar 300-700kg, \url{https://de.wikipedia.org/wiki/Dromedar}
+  \item Afrikanischer Strauß bis 135kg, \url{https://de.wikipedia.org/wiki/Afrikanischer_Strau\%C3\%9F}
+  \item Frosch 10g, \url{http://www.biologie-schule.de/frosch-steckbrief.php}
+  \item Krokodil 100-1000kg, \url{https://de.wikipedia.org/wiki/Krokodile}
+  \item Schlange bis 100kg bei Riesenschlangen, \url{https://de.wikipedia.org/wiki/Schlangen}
+  \item Girafffe bis 2 Tonnen, \url{https://www.tierchenwelt.de/huftiere/73-giraffe.html}
+ \end{itemize}
+ 
