--- a/latex/pca.tex
+++ b/latex/pca.tex
@@ -1,54 +1,93 @@
 %------------
+%------------
 \chapter{PCA}
 
- \todo{Warum PCA und nicht zB apriori Algorithmus?}
- Position und Krümmung der Wirbelsäule charakteristisch \todo{Handbuch der Anatomie für Künstler als Quelle?}
-
- \emph{Primary Component Analysis} (PCA) wird mit dem Ziel angewendet herauszufinden was die Dimensionen sind, in denen sich Skelette am meisten unterscheiden. \todo{PCA Quelle}
+ Eine \emph{Principal Component Analysis} (PCA) oder auch Hauptkomponentenanalyse auf einer Menge von Beispielen findet diejenigen Dimensionen, in denen sich die Beispiele am meisten unterscheiden, die "`principle components"'. Das Ziel dabei ist in den meisten Fällen die Dimensionalität der Daten zu reduzieren. Das wird dadurch erreicht, dass die Eingabedaten nur noch durch die "`primary components"' dargestellt werden, da die anderen Dimensionen optimalerweise nur einen marginalen Einfluss auf die Daten haben.
  
- Die Eingabe für eine PCA ist eine Menge von Punkten. Diese Punkte repräsentieren einzelne Instanzen dessen, was untersucht werden soll, hier ein Skelett. Für jede Eigenschaft des Skeletts hat der Punkt eine Dimension. Gegeben ist also eine Menge von Punkten $P$ mit jeweils $d$ Dimensionen. Sie bilden im $d$-dimensionalen Raum einen Ellipsoid.
+ Das Ziel hier, war vor allem die Position und Krümmung der Wirbelsäule bei unterschiedlichen Tieren zu untersuchen, da diese sehr charakteristische Merkmale eines Skeletts sind. Aus dem gleichen Grund soll der Algorithmus zur Generierung der Skelette mit der Generierung der Wirbelsäule starten und daraus dann den Rest der Knochen "`wachsen"' lassen.
+ Die Hoffnung hier ist auch, dass dadurch Skelette generiert werden, die ausbalanciert wirken. Es soll nichts generiert werden, das aussieht, als würde es sofort umfallen. \todo{Hat das funktioniert?}
+ 
+ Eine PCA, die als Eingabe viele Beispiele für Wirbelsäulen und ein paar weiteren Daten zum zugehörigen Tier bekommt, ist hier sehr hilfreich, da sie Zusammenhänge für die Positionierung der Wirbelsäule liefert.
+ 
+ 
+ %-----------------------
+ \section{Funktionsweise}
+ 
+ \todo{PCA Quelle}
+ 
+ Die Eingabe für eine PCA ist eine Menge von Punkten. Diese Punkte repräsentieren einzelne Instanzen dessen, was untersucht werden soll, hier ein Skelett. Für jede Eigenschaft des Skeletts hat der Punkt eine Dimension. Gegeben ist also eine Menge von Punkten $P$ mit jeweils $d$ Dimensionen. Es wird angenommen, dass die Punkte in jeder Dimension normal-/gaußverteilt sind. Dann bilden die Punkte im $d$-dimensionalen Raum einen Ellipsoid.
  
  Das Ziel der PCA ist herauszufinden wo die Achsen des Ellipsoids liegen, also wie die Eingabedimensionen miteinander korreliert sind. Interessant sind dabei die Achsen in deren Richtung die Daten die größe Streuung aufweisen.
  
- Um dies zu Berechnen wird zunächst die Kovarianzmatrix aufgestellt, deren Einträge die Kovarianz zwischen den verschiedenen Achsen beschreibt.
- Die Eigenvektoren dieser Kovarianzmatrix sind dann die Achsen des Ellipsoids und die zugehörigen Eigenwerte geben an wie weit ausgedehnt das Ellipsoid in dieser Richtung ist. Der Mittelpunkt des Ellipsoids ist der Mittelwert der Daten.
+ Um diese Achsen zu Berechnen wird zunächst die Kovarianzmatrix aufgestellt, deren Einträge die Kovarianz zwischen den verschiedenen Achsen beschreibt.
+ Die Eigenvektoren dieser Kovarianzmatrix sind dann die Achsen des Ellipsoids und die zugehörigen Eigenwerte geben an wie groß die Varianz in dieser Richtung ist, also weit ausgedehnt das Ellipsoid in dieser Richtung ist. Der Mittelpunkt des Ellipsoids ist der Mittelwert der Daten.
  
  Will man nun herausfinden was die Haupteigenschaften eines Datenpunktes sind, stellt man ihn im neuen Koordinatensystem des Ellipsoids dar, also als gewichtete Summe der Eigenvektoren, und betrachtet dann nur die Dimensionen mit den größten Eigenwerten. Dazu zieht man zunächst den Mittelwert vom Datenpunkt ab und multipliziert ihn dann mit der transponierten Basiswechselmatrix, also der Matrix, in der in den Zeilen die Eigenvektoren stehen.
- 
- Die Eigenwerte stellen die Varianz in Richtung des zugehörigen Eigenvektors dar. \todo{Einfügen und Beschreiben der Bilder von Eigenvektoren multipliziert mit Standardabweichung}
 
- %- - - - - - - - - - - - - - - - - 
- \subsection{Datenerhebung}
+
+ %---------------------- 
+ \section{Datenerhebung}
  
- \todo{Abschnitt über konkrete Beispiele. Warum diese? Einigermaßen sinnvoll verteilt?}
+ Die konkret erhobenen Beispiele sind vor allem der Datenlage \bzw der zugänglichen Quellen geschuldet. Trotzdem wurde darauf geachtet möglichst viele unterschiedliche Tierarten mit viel Variation in den erhobenen Merkmalen zu finden.
  
- \todo{Warum wurden ausgerechnet diese Daten erhoben? (Position der Wirbelsäule um Balanceberechnungen zu vermeiden)}
+ Viele Beispiele stammen Zoologiebüchern, in denen sie als Beispiele für bestimmte Erklärungen angegeben waren (Bildquellen siehe Anhang \ref{appendix_pca_skeletons}). Dem ist auch geschuldet, dass recht viele Dinosaurierskelette dabei sind. Denn von anderen Tieren gibt es als alternative Darstellung eine Außenansicht des lebenden Tieres. Das geht bei ausgestorbenen Tieren im Allgemeinen nicht.
  
- Die Eingabedaten für die PCA wurden folgendermaßen erhoben:
- Das Bild des gewählten Tierskeletts wird so zugeschnitten, dass kein unnötiger Rand dabei ist. Dann wird das Bild möglichst groß und möglichst zentiert in ein $1000 \times 1000$ Pixel große Bildumgebung eingefügt.
- Ist das geschehen kann die Lage der Wirbelsäule und die Länge der Beine annotiert werden.
- 
- Die Lage der Wirbelsäule wird durch drei kubische Bézierkurven erfasst. Jeweils einer für Hals, Rücken und Schwanz. Hals und Rücken teilen sich einen Punkt und Rücken und Schwanz. Die Punkte an denen sie ineinander übergehen sind der Schultergürtel und der Beckengürtel.
- Das sind die ersten $20$ Eingabedimensionen ($10$ zweidimensionale Punkte).
- 
- Zusätzlich wird jeweils durch eine Gerade im Bild die Länge der Vorder- und Hinterbeine eingetragen, falls vorhanden. Beine sind Extremitäten, die Bodenkontakt haben und zur Fortbewegung verwendet werden. \todo{auch Arme und/oder Flossen erfassen?} Auch die Flügellänge wird erfasst, aber da die Position und Haltung der Flügel auf Bildern von Skeletten sehr stark variiert, ist das nicht aussagekräftig.
- 
- Zusätzlich zum Bild gibt es noch eine Textdatei, in der weitere Daten erfasst werden. Das sind:
+ Die Merkmale, die zur Datenerhebung ausgesucht wurden, sind charakteristisch für ein Skelett, sie tragen also viel zum Gesamteindruck bei. Das sind vor allem der Verlauf der Wirbelsäule und der Aufbau der Extremitäten.
+  
+ Eingeschränkt wurde die Erhebung natürlich auch durch die begrenzte Datenlage. Am einfachsten zu bekommen sind 2D-Bilder mit Seitenansichten von Skeletten. Das schließt Merkmale aus, die Tiefeninformationen benötigen, \zb den Abstand der Füße oder die Winkel der Gelenke an den Beinen. Auch Informationen zu sehr kleinen Knochen, wie Handwurzelknochen oder die unterschiedlichen Fingerknochen, sind schwierig zu bekommen, da sie teilweise schwierig zu Erkennen und zu Markieren sind. Deshalb haben wir die Erhebung auf folgende Daten eingeschränkt:
+  
  \begin{itemize}
-  \item Tierklasse (Fisch, Amphibium, Reptil, Vogel oder Säugetier) - dies eignet sich aber nicht als Dimension für die PCA, da es keine kontinuierliche Achse ist (ein Vogel geht \zb nicht kontinuierlich in ein Säugetier über).
+  \item Ein Bild mit der Seitenansicht des Skeletts.
+  Darin wurde die Lage der Wirbelsäule und die Länge der Knochen der Vorder- und Hintergliedmaßen markiert, falls vorhanden.\\
+  (Die Quellen hierfür sind in Anhang \ref{appendix_pca_skeletons} zu finden.)
   
-  \item Flügel (ja oder nein) - das Problem hierbei ist, dass dies zu den Datensatz in zwei Teile teilt: Tiere mit und Tiere ohne Flügel (sind auch Cluster).
+  \item Die Tierklasse, also ob das Tier ein Fisch, ein Amphib, ein Reptil oder ein Säugetier ist. Diese Daten lassen sich nicht auf einer kontinuierlichen Skala abbilden und sind deshalb nicht als Eingabedimension für die PCA geeignet. Sie wurden trotzdem erhoben, da sie für eine anderweitige Auswertung hilfreich sein könnten.
   
-  \item Anzahl der Beine mit Bodenkontakt geteilt durch zwei (da immer symmetrisch)
+  \item Ob Flügel vorhanden sind.
   
-  \item Arme \bzw Beine ohne Bodenkontakt (ja oder nein) - hier gibt es wieder das Problem, dass hier nur zwei Werte möglich sind und der Datensatz so in zwei Teile geteilt wird. Außerdem gibt es nur relativ wenige Tiere mit "`Armen"'. Deshalb ist es wahrscheinlich besser dieses Attribut einfach zu ignorieren.
+  \item Die Anzahl der Beine mit Bodenkontakt geteilt durch zwei. (Die Skalierung mit $2$ ist nicht relevant für die PCA, soll aber repräsentieren, dass ein Tier immer eine gerade Anzahl an Extremitäten besitzt.)
   
-  \item Gewicht in kg - grob geschätztes Gewicht eines ausgewachsenen Exemplars dieser Art. Das ist oft ein Maximalwert, da oft nur dieser in Artikeln über Tiere angegeben wird. Der größte Wert, der hier möglich ist, beträgt $120$ Tonnen. Das ist das Gewicht des schwersten Wirbeltiers, eines Blauwals. \todo{logarithmisch?}
+  \item Das ungefähre Gewicht eines ausgewachsenen Exemplars in Kilogramm. Hier wurde oft das maximale Gewicht verwendet, da keine Angaben zum Durchschnittsgewicht zu finden waren. Teilweise gibt es auch verschiedene (Unter-)Arten, die unterschiedlich schwer werden können, aber, bei der Auflösung der hier erhobenen Daten, das gleiche Gewicht haben. In diesem Fall wurde ein beliebiger Wert gewählt, der zwischen dem Gewicht der leichtesten und dem der schwersten (Unter-)Art liegt. (Die Quellen hierfür sind im Anhang \ref{appendix_pca_weight} zu finden.)
  \end{itemize}
 
- Alle erfassten Dimensionen werden vor der Weiterverarbeitung durch die PCA auf das Intervall $[0, 1]$ skaliert, so dass jede Dimension den gleichen Einfluss auf das Ergebnis hat. \todo{Auswirkungen der Skalierung erklären (ändert Gewichtung; Gewichtung nach größe im Bild / nach Auswirkung auf Gesamteindruck des Skeletts)}
+ Die Bilder der Skelette wurden folgendermaßen für die Datenerhebung vorbereitet:
  
- \subsubsection{Schwierigkeiten}
+ \begin{enumerate}
+  \item Zuschneiden des Bildes, so dass möglichst nur das Skelett mit wenig Rand außen herum zu sehen ist.
+  \item Einfügen in eine $1000 \times 1000$ Pixel große Bildumgebung.
+  \item Verschieben innerhalb der Bildumgebung an den unteren Rand und horizontal in die Mitte.
+ \end{enumerate}
+
+ Ist das geschehen kann die Lage der Wirbelsäule und die Länge der Knochen der Extremitäten annotiert werden.
+ 
+ Die Lage der Wirbelsäule wird durch drei kubische Bézierkurven erfasst. Jeweils einer für Hals, Rücken und Schwanz. Hals und Rücken teilen sich einen Punkt und Rücken und Schwanz. Die Punkte an denen sie ineinander übergehen sind der Schultergürtel und der Beckengürtel.
+ Das sind die ersten $20$ Eingabedimensionen für die PCA ($10$ zweidimensionale Punkte).
+ 
+ Zusätzlich wird jeweils durch eine Gerade im Bild die Länge des Ober- und Unterarms, der Hand, des Ober- und Unterschenkels und des Fußes eingetragen, falls vorhanden. Die Bezeichnung der Extremität als Arm oder Bein ist nur zur Unterschiedung zwischen Vorder- und Hinterextremitäten gedacht. Sie hat in keiner Weise etwas mit der Funktion der Gliedmaßen zu tun.
+ 
+ Zusätzlich zum Bild gibt es noch eine Textdatei, in der die restlichen Daten erfasst werden.
+
+ Alle erfassten Dimensionen werden vor der Weiterverarbeitung durch die PCA auf das Intervall $[0, 1]$ skaliert, so dass jede Dimension den gleichen Einfluss auf das Ergebnis hat. 
+ Um das zu erreichen werden alle Daten einer Dimension durch den maximal möglichen Wert geteilt.
+ 
+ \begin{itemize}
+  \item Koordinaten oder Längen im Bild liegen im Intervall $[0, 1000]$, da sie in Pixeln dargestellt werden und das Bild eine Größe von $1000 \times 1000$ Pixel hat. Deshalb werden sie mit $1000$ skaliert. Bei Längen wären theoretisch auch Werte $> 1000$ möglich. Solche Längen wären aber unrealistisch und werden deshalb ignoriert.
+  
+  \item Die Angabe, ob das Tier Flügel hat oder nicht, wird mit $0$ oder $1$ dargestellt, muss also nicht skaliert werden.
+  
+  \item Die Anzahl der Extremitäten geteilt durch $2$ ist maximal $2$, wird also mit $2$ skaliert.
+  
+  \item Das Gewichtsdaten sind nicht normalverteilt. Stellt man sie aber mit logarithmischer Skala dar, sind sie das (siehe unten, "`Analyse der Eingabedaten"'). Deshalb wird das Gewicht $w$ für die PCA wie folgt umgerechnet: $\frac{\mathrm{log}(w+1)}{\mathrm{log}(\mathrm{max}+1)}$. Das schwerste Wirbeltier ist der Blauwal mit bis zu 120 Tonnen (siehe \ref{appendix_pca_weight}). Deshalb ist hier max $= 120.000$.
+\end{itemize}
+
+ Generell bewirkt die Skalierung einer Dimension eine Gewichtung. Denn durch eine Skalierung ändert sich auch die (Co-)Varianz und somit auch die Kovarianzmatrix. Seien beispielsweise $s,t \in \mathbb{R}$, dann bewirkt eine Skalierung mit $s$ in Dimension $x$ und eine Skalierung mit $t$ in Dimension $y$ eine Skalierung von $s \cdot t$ der Kovarianz Cov$(x,y)$ von $x$ mit $y$, da $\mathrm{Cov}(sx, ty) = (sx - s\mu_x) (ty - t\mu_y) = st \cdot \mathrm{Cov}(x,y)$, mit Erwartungswert $\mu_i$ in Dimension $i$.
+ 
+ Die Daten einer Dimension werden nicht mit dem maximal angenommenen Wert skaliert, sondern mit dem maximal möglichen. Das bedeutet bei Koordinaten und Längen im Bild, dass sie größeren \bzw kleineren Einfluss haben, je nach dem wieviel Raum sie im Bild einnehmen, also wieviel sie zum Gesamteindruck des Tieres beitragen.
+ 
+ Eine andere Skalierung, die manchen Dimensionen mehr oder weniger Gewicht gibt, wäre sicherlich auch möglich gewesen. Da es aber keine besonderen Gründe für eine andere Skalierung gab, wurde diese gewählt.
+ 
+ %- - - - - - - - - - - - - -
+ \subsection{Schwierigkeiten}
  
  \begin{itemize}
   \item Bei Fischen ist nicht klar wo Rücken in Schwanz übergeht, da der Beckengürtel sich teilweise beim Kopf befindet oder auch gar nicht vorhanden ist. Bei der Datenerhebung wurde der Übergang ungefähr bei der Rücken- oder der Afterflosse festgelegt, da dies relativ gut zum Algorithmus passt.
@@ -58,84 +97,11 @@
   \item Die Schwanzposition bei Tieren mit sehr langen Schwänzen ist auf den Bildern relativ beliebig. Hier wurde versucht den Schwanz möglichst gerade nach hinten fortzusetzen, auch wenn er auf dem Bild irgendwie eingerollt ist.
   
  \end{itemize}
-
-
  
- \subsubsection{Skelettbilder}
- \todo{Anhang}
+ %---------------------------------
+ \section{Analyse der Eingabedaten}
  
- alle Bilder aus \cite{Spezielle_Zoologie} außer:
- \begin{itemize}
-  \item Sinornis und Taube aus \cite{Vergleichende_Anatomie}
-  \item Seekuh aus \cite{Zoologie25Wehner}
-  \item Archaeopteryx, Eusthenopteron, Ichthyosaurus, Ichthyostega, Muraenosaurus, Urpferdchen aus \cite{Zoologie24Wehner}
-  \item Pferd: \url{https://www.kosmos.de/content/buecher/ratgeber/pferde-reiten/vorwaerts-abwaerts-eine-frage-der-haltung/}
-  \item Känguru \url{http://www.bildwoerterbuch.com/tierreich/beuteltiere/kaenguru/skelett-eines-kaengurus.php}
-  \item Schwan \url{https://www.alamy.de/skelett-eines-schwans-osteographia-oder-die-anatomie-der-knochen-london-1733-quelle-47-ich-12-kapitel-v-saitenhalter-autor-cheselden-william-image226921369.html}
-  \item Chamäleon \url{https://www.madcham.de/de/anatomie/}
-  \item Gnu \url{https://lutzmoeller.net/Afrika/2007/Lutz-Juli/8-Gnu.php}
-  \item Tyrannosaurus Rex \url{https://upload.wikimedia.org/wikipedia/commons/9/9f/Tyrannosaurus_skeleton.jpg}
-  \item Dormedar \url{https://upload.wikimedia.org/wikipedia/commons/a/ac/Camel_Skeleton_-_Richard_Owen_-_On_the_Anatomy_of_Vertebrates_\%281866\%29.jpg}
-  \item Strauß \url{https://www.scienceinschool.org/sites/default/files/articleContentImages/21/ostrich/issue21ostrich5_xl.jpg}
-  \item Blauwal \url{https://www.quagga-illustrations.de/wp-content/uploads/2014/05/h0001705.jpg}
-  \item Krokodil \url{https://de.depositphotos.com/210906852/stock-illustration-skeleton-crocodile-vintage-line-drawing.html}
-  \item Giraffe \url{https://de.wikipedia.org/wiki/Giraffen#/media/Datei:Giraffe_skeleton.jpg}
- \end{itemize}
-
- 
- \subsubsection{Gewicht}
- \todo{Anhang}
- 
- \begin{itemize}
-  \item Gewicht: Durchschnittsgewicht eines ausgewachsenen Tieres in kg. Schwerstes Tier: Blaubwal, Maximum ist also 120 Tonnen \url{http://tierdoku.com/index.php?title=Blauwal}
-  \item Durschnittsgewicht (Warmblut-)Pferd: 600 kg \url{https://www.reitarena.com/de/blog/blog-post/2015/03/03/das-pferd-grundlegende-fakten.html}
-  \item Afrikanischer Elefant 4000kg: \url{https://de.upali.ch/gewicht-und-grosse/}
-  \item Amerikanischer Flussbarsch 2kg: \url{http://tierdoku.com/index.php?title=Amerikanischer_Flussbarsch}
-  \item Archaeopteryx wird zu Vögeln gerechnet, Gewicht 1kg \url{https://de.wikipedia.org/wiki/Archaeopteryx}
-  \item Brachiosaurus (Reptil \url{http://www.biologie-schule.de/brachiosaurus-steckbrief.php}), 23 - 44 Tonnen \url{https://de.wikipedia.org/wiki/Brachiosaurus}
-  \item Dimetrodon Reptil, 250kg \url{https://de.wikipedia.org/wiki/Dimetrodon}
-  \item Elster 0,2kg \url{https://de.wikipedia.org/wiki/Elster}
-  \item Forelle 10-50kg (je nach Art) \url{https://de.wikipedia.org/wiki/Forelle}
-  \item Fregattvogel (Bild nicht verwendet, da nicht im Stand, sondern im Flug abgebildet) 0,6 - 1,6kg \url{https://de.wikipedia.org/wiki/Fregattv\%C3\%B6gel}
-  \item Grönlandwal 50-100 Tonnen \url{https://de.wikipedia.org/wiki/Gr\%C3\%B6nlandwal}
-  \item Ichthyornis 0.3kg \url{http://dinodata.de/animals/birds/pages_i/ichthyornis.php}
-  \item Ichthyosaurus Fisch ca 90kg \url{https://www.tiere-online.de/sonstige-tiere/dinosaurier/ichthyosaurus/}
-  \item Ichthyostega 80kg \url{https://dinosaurierwelt.com/ichthyostega/}
-  \item Kaffernbüffel 350 - 900kg \url{https://de.wikipedia.org/wiki/Kaffernb\%C3\%BCffel}
-  \item Kaninchen je nach Art, grob 1kg
-  \item Klippschliefer 2-5kg \url{https://de.wikipedia.org/wiki/Klippschliefer}
-  \item Koboldmaki 0,1kg \url{https://de.wikipedia.org/wiki/Koboldmakis}
-  \item Landschildkröte unterschiedlich grob 50kg
-  \item Ohrenrobbe 25-500kg \url{https://de.wikipedia.org/wiki/Ohrenrobben}
-  \item Panzerspitzmaus 100g \url{https://de.wikipedia.org/wiki/Panzerspitzmaus}
-  \item Parasaurolophus walkeri 4-5 Tonnen \url{http://tierdoku.com/index.php?title=Parasaurolophus_walkeri}
-  \item Peloneustes philarchus 100kg \url{https://de.wikipedia.org/wiki/Peloneustes}
-  \item Pottwal bis 50 Tonnen \url{https://de.wikipedia.org/wiki/Pottwal}
-  \item Rothirsch 80-350kg \url{https://de.wikipedia.org/wiki/Rothirsch}
-  \item Seehund 100-150kg \url{https://de.wikipedia.org/wiki/Seehund}
-  \item Sinornis 20g \url{http://dinodata.de/animals/birds/pages_s/sinornis.php}
-  \item Stegosaurus 4,5 Tonnen \url{https://de.wikipedia.org/wiki/Stegosaurus}
-  \item Taube unterschiedlich grob 1-2kg
-  \item Thrinaxodon Reptil "`ein paar Pfund"' \url{https://www.thoughtco.com/thrinaxodon-1091887}
-  \item Triceratops 6-12 Tonnen \url{https://de.wikipedia.org/wiki/Triceratops}
-  \item Urpferdchen (Propalaeotherium) 30kg \url{https://de.wikipedia.org/wiki/Propalaeotherium}
-  \item Schwan 14kg \url{https://de.wikipedia.org/wiki/Schw\%C3\%A4ne}
-  \item Chamäleon 0,1 - 2kg \url{https://www.tierchenwelt.de/echsen/128-chamaeleon.html}
-  \item Gämse 25-50kg \url{https://de.wikipedia.org/wiki/G\%C3\%A4mse}
-  \item Gnu 140-250kg \url{https://de.wikipedia.org/wiki/Gnus}
-  \item Schwein 100kg \url{https://de.wikipedia.org/wiki/Hausschwein}
-  \item Känguru 2-90kg \url{https://de.wikipedia.org/wiki/K\%C3\%A4ngurus}
-  \item Tyrannosaurus 9 Tonnen \url{https://de.wikipedia.org/wiki/Tyrannosaurus}
-  \item Dromedar 300-700 kg \url{https://de.wikipedia.org/wiki/Dromedar}
-  \item Afrikanischer Strauß bis 135kg \url{https://de.wikipedia.org/wiki/Afrikanischer_Strau\%C3\%9F}
-  \item Frosch ca 10g \url{http://www.biologie-schule.de/frosch-steckbrief.php}
-  \item Krokodil 100-1000kg \url{https://de.wikipedia.org/wiki/Krokodile}
-  \item Schlange bis 100kg bei Riesenschlangen \url{https://de.wikipedia.org/wiki/Schlangen}
-  \item Girafffe bis 2 Tonnen \url{https://www.tierchenwelt.de/huftiere/73-giraffe.html}
- \end{itemize}
- 
- %- - - - - - - - - - - - - - - - - -
- \subsection{Analyse der Eingabedaten}
+ \todo{Plots einfügen}
  
  \begin{itemize}
   \item Test auf Gaußverteilung (Q Q Plot) \todo{verstehen, programmieren}
@@ -148,7 +114,7 @@
  
  
  %- - - - - - - - - - - - - - - - - - - - -
- \subsection{Analyse der PCA (-Ergebnisse)}
+ \section{Analyse der PCA (-Ergebnisse)}
 
  \begin{itemize}
   \item Eigenvektoren/-werte
