Change ostrich skeleton picture and remove some todos

--- a/latex/appendix.tex
+++ b/latex/appendix.tex
@@ -120,6 +120,8 @@ Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArc
  \section{Skelettbilder}
  \label{appendix_pca_skeletons}
  
+ \todo{alphabetisch sortieren}
+ 
  alle Bilder aus \cite{Spezielle_Zoologie} außer:
  \begin{itemize}
   \item Sinornis und Taube aus \cite{Vergleichende_Anatomie}
@@ -132,15 +134,18 @@ Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArc
   \item Gnu \url{https://lutzmoeller.net/Afrika/2007/Lutz-Juli/8-Gnu.php}
   \item Tyrannosaurus Rex \url{https://upload.wikimedia.org/wikipedia/commons/9/9f/Tyrannosaurus_skeleton.jpg}
   \item Dormedar \url{https://upload.wikimedia.org/wikipedia/commons/a/ac/Camel_Skeleton_-_Richard_Owen_-_On_the_Anatomy_of_Vertebrates_\%281866\%29.jpg}
-  \item Strauß \url{https://www.scienceinschool.org/sites/default/files/articleContentImages/21/ostrich/issue21ostrich5_xl.jpg}
+  \item Strauß \url{https://www.alamy.de/stockfoto-skelett-von-strauss-24658845.html}
   \item Blauwal \url{https://www.quagga-illustrations.de/wp-content/uploads/2014/05/h0001705.jpg}
   \item Krokodil \url{https://de.depositphotos.com/210906852/stock-illustration-skeleton-crocodile-vintage-line-drawing.html}
   \item Giraffe \url{https://de.wikipedia.org/wiki/Giraffen#/media/Datei:Giraffe_skeleton.jpg}
+  \item Schlange: zu Schlangen gibt es keine Bilder, die deren Skelett in ausgestrecktem Zustand von der Seite darstellen. Deshalb wurde ein leeres Bild genommen und der Verlauf des Rückens durch eine Gerade angenähert (Extremitäten besitzt eine Schlange nicht. Außerdem ist nicht erkennbar ob \bzw wo Hals in Rücken und Rücken in Schwanz übergeht. Deshalb wurde die komplette Wirbelsäule als Rücken markiert.)
  \end{itemize}
 
  
  \section{Gewicht der Tiere}
  \label{appendix_pca_weight}
+ 
+ \todo{alphabetisch sortieren}
  
  \begin{itemize}
   \item Blauwal 120 Tonnen, \url{http://tierdoku.com/index.php?title=Blauwal}, "`das schwerste bekannte Tier der Erdgeschichte"' \url{https://de.wikipedia.org/wiki/Blauwal}
