--- a/latex/pca.tex
+++ b/latex/pca.tex
@@ -103,18 +103,104 @@
  %---------------------------------
  \section{Analyse der Eingabedaten}
  
- \todo{PCA Daten aktualisieren, Plots einfügen}
+ Der Mittelwert aller Eingabedaten ist in Abbildung \ref{mean_log_weight} visualisiert. Wie die bei der Datenerhebung ist hier die Position der Wirbelsäule auf einem $1000 \times 1000$ Pixel Bild gezeigt. Da von den Knochen der Beine und Arme nur die Längen erhoben wurden, sind ihre Positionen nicht realistisch. Die Ober- und Unterschenkel und die Ober- und Unterarme, sind von den Übergangspunkten Hals-Rücken und Rücken-Schwanz senkrecht nach unten gezeichnet, Hand und Fuß sind vom jeweiligen Endpunkt von Arm oder Bein horizontal nach links gezeichnet. Die restlichen Daten sind nicht visualisiert, sondern nur in Textform in der oberen linken Ecke angegeben.
  
- \begin{itemize}
-  \item Test auf Gaußverteilung (Q Q Plot) \todo{verstehen, programmieren}
-  \item min/max Abstand zum Mittelwert
-  \item mit/ohne Flügel: Anzahl, Flügelcluster
-  \item Gewicht logarithmisch wegen Verteilung, Gewicht ist dann auch nicht mehr kleiner null (egal wie logarithmisch, ist nur Skalierung)
- \end{itemize}
+ \begin{figure}
+  \centering
+  \includegraphics[width=0.9\textwidth]{../PCA/mean_log_weight.jpg}
+  \caption{Visualisierung des Mittelwerts der Eingabedaten.}
+  \label{mean_log_weight}
+ \end{figure}
+ 
+ Berachtet man die, in jeder Dimension auf das Intervall $[0, 1]$ skalierten Eingabedaten, so hat der Seehund den minimalen Abstand zum Mittelwert (siehe Abbildung \ref{seehund_farbig}).
+ 
+ Den maximalen Abstand hat die Schlange. Hier muss man aber dazu sagen, dass die Schlange der einzige Datenpunkt ohne Skelettbild ist. Das liegt daran, dass es keine seitlichen Abbildungen von ausgestreckten Schlangen gibt. Sie werden eigentlich immer gekrümmt dargestellt, da sonst das Bild sehr lang und schmal werden würde. Deshalb wurde für die Schlange eine horizontale Gerade knapp über dem unteren Bildrand gewählt, die den Rücken darstellen soll. Extremitäten und ersichtliche Punkte an denen der Rücken in Hals oder Schwanz übergeht gibt es ja keine.
+ 
+ Der Punkt mit dem zweitgrößten Abstand zum Mittelwert ist der Schwan (siehe Abbildung \ref{schwan_farbig}).
+ 
+ \begin{figure}
+  \centering
+  \includegraphics[width = 0.5\textwidth]{../PCA/Skelettbilder/Seehund_farbig.png}
+  \caption{Annotiertes Bild des Skeletts eines Seehunds. Ansonsten wurde folgendes erhoben:
+  Tierklasse: Säugetier, keine Flügel, Paare von Beinen mit Bodenkontakt: $1$, ungefähres Gewicht: $100$kg}
+  \label{seehund_farbig}
+ \end{figure}
+ 
+  \begin{figure}
+  \centering
+  \includegraphics[width = 0.5\textwidth]{../PCA/Skelettbilder/Schwan_farbig.png}
+  \caption{Annotiertes Bild des Skeletts eines Schwans. Das Problem hier ist, dass sich der Hals nicht mit einer kubischen Bézierkurve darstellen lässt. Deshalb wurde er möglichst gut angenähert. Ansonsten wurde folgendes erhoben:
+  Tierklasse: Vogel, Flügel, Paare von Beinen mit Bodenkontakt: $1$, ungefähres Gewicht: $14$kg}
+  \label{schwan_farbig}
+ \end{figure}
+ 
+ Es gibt $7$ Datenpunkte mit Flügeln und $37$ ohne Flügel. In den Visualisierungen der Eingabedaten (siehe Abbildungen \ref{input_data_spine}, \ref{input_data_lengths} und \ref{input_data_weight}) ist zu sehen, dass die Tiere mit Flügeln zwar kein Cluster bilden, aber doch meist nahe zusammen liegen. Nach der Koordinatentransformation durch die PCA bilden sie ein Cluster (siehe Abschnitt \ref{section_pca_result_analysis}). \todo{andere Daten taggen? Anzahl Beine mit Bodenkontakt, Tierklasse}
+
+ Das Gewicht der Eingabedaten ist nicht normalverteilt (siehe Abbildung \ref{gnuplot_weight}), aber auf einer logarithmischen Skala schon (siehe Abbildung \ref{gnuplot_log_weight}). \todo{QQ Diagramme verstehen und programmieren}
+ Bei linearem Gewicht als Eingabe für die PCA treten dadurch bei der Kombination von zufälligen Werten für die Eigenvektoren schnell Gewichte kleiner null auf. Dies wird bei einer logarithmischen Skala vermieden.
+ Welcher Logarithmus zur Umrechnung der Daten verwendet wird schlägt sich nur als linearer Faktor nieder. Da hier wiederum nicht ersichtlich ist welche Skalierung am besten wäre, wurde hier der Zehnerlogarithmus verwendet.
+
+  
+  \begin{figure}
+   \subfloat[Erster Punkt des Halses]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_neck1.pdf}}
+   \qquad
+   \subfloat[Zweiter Punkt des Halses]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_neck2.pdf}}
+   \\
+   \subfloat[Dritter Punkt des Halses]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_neck3.pdf}}
+   \qquad
+   \subfloat[Vierter Punkt des Halses \bzw erster Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_back1.pdf}}
+   \\
+   \subfloat[Zweiter Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_back2.pdf}}
+   \qquad
+   \subfloat[Dritter Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_back3.pdf}}
+  \end{figure}
+   
+  \begin{figure}
+   \ContinuedFloat
+   \subfloat[Vierter Punkt des Rückens \bzw erster Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_back4.pdf}}
+   \qquad
+   \subfloat[Zweiter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_tail2.pdf}}
+   \\
+   \subfloat[Dritter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_tail3.pdf}}
+   \qquad
+   \subfloat[Vierter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_tail4.pdf}}
+   
+   \caption{Erhobene Daten: Punkte der Bézierkurven der Wirbelsäule}
+   \label{input_data_spine}
+  \end{figure}
+
+  \begin{figure}
+   \subfloat[Länge Ober- und Unterarm]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_upper+lowerArm.pdf}}
+   \qquad
+   \subfloat[Länge Unterarm und Hand]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_lowerArm+hand.pdf}}
+   \\
+   \subfloat[Länge Ober- und Unterschenkel]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_upper+lowerLeg.pdf}}
+   \qquad
+   \subfloat[Länge Unterschenkel und Fuß]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_lowerLeg+foot.pdf}}
+   
+   \caption{Erhobene Daten: Längen der Extremitäten. Gegeneinander sind jeweils abgetragen Ober- und Unterarm, Ober- und Unterschenkel, Unterarm und Hand, Unterschenkel und Fuß.}
+   \label{input_data_lengths}
+  \end{figure}
+ 
+ \begin{figure}
+  \centering
+  \subfloat[lineare Skala]{\includegraphics[width=0.8\textwidth]{../PCA/gnuplot/results/input_weight.pdf} \label{gnuplot_weight}}
+  \\
+  \subfloat[logarithmische Skala]{\includegraphics[width=0.8\textwidth]{../PCA/gnuplot/results/input_weight_logarithmic.pdf}\label{gnuplot_log_weight}}
+  
+  \caption{Erhobene Daten: Gewicht}
+  \label{input_data_weight}
+ \end{figure}
+
+ 
+
+
+
  
  
  %- - - - - - - - - - - - - - - - - -
  \section{Analyse der PCA-Ergebnisse}
+ \label{section_pca_result_analysis}
 
  \begin{itemize}
   \item Eigenvektoren/-werte
