Add prettier frog picture, move plots to appendix and describe animal reconstructions

--- a/latex/appendix.tex
+++ b/latex/appendix.tex
@@ -116,6 +116,58 @@ Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArc
 \chapter{Erhobene Daten für PCA}
 \label{appendix_pca}
 
+ \begin{figure}
+   \subfloat[Erster Punkt des Halses]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_neck1.pdf}}
+   \qquad
+   \subfloat[Zweiter Punkt des Halses]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_neck2.pdf}}
+   \\
+   \subfloat[Dritter Punkt des Halses]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_neck3.pdf}}
+   \qquad
+   \subfloat[Vierter Punkt des Halses \bzw erster Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_back1.pdf}}
+   \\
+   \subfloat[Zweiter Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_back2.pdf}}
+   \qquad
+   \subfloat[Dritter Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_back3.pdf}}
+  \end{figure}
+   
+  \begin{figure}
+   \ContinuedFloat
+   \subfloat[Vierter Punkt des Rückens \bzw erster Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_back4.pdf}}
+   \qquad
+   \subfloat[Zweiter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_tail2.pdf}}
+   \\
+   \subfloat[Dritter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_tail3.pdf}}
+   \qquad
+   \subfloat[Vierter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_tail4.pdf}}
+   
+   \caption{Erhobene Daten: Punkte der Bézierkurven der Wirbelsäule}
+   \label{input_data_spine}
+  \end{figure}
+
+  \begin{figure}
+   \subfloat[Länge Ober- und Unterarm]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_upper+lowerArm.pdf}}
+   \qquad
+   \subfloat[Länge Unterarm und Hand]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_lowerArm+hand.pdf}}
+   \\
+   \subfloat[Länge Ober- und Unterschenkel]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_upper+lowerLeg.pdf}}
+   \qquad
+   \subfloat[Länge Unterschenkel und Fuß]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_lowerLeg+foot.pdf}}
+   
+   \caption{Erhobene Daten: Längen der Extremitäten. Gegeneinander sind jeweils abgetragen Ober- und Unterarm, Ober- und Unterschenkel, Unterarm und Hand, Unterschenkel und Fuß.}
+   \label{input_data_lengths}
+  \end{figure}
+ 
+ \begin{figure}
+  \centering
+  \subfloat[lineare Skala]{\includegraphics[width=0.8\textwidth]{../PCA/gnuplot/results/input_weight.pdf} \label{gnuplot_weight}}
+  \\
+  \subfloat[logarithmische Skala]{\includegraphics[width=0.8\textwidth]{../PCA/gnuplot/results/input_weight_logarithmic.pdf}\label{gnuplot_log_weight}}
+  
+  \caption{Erhobene Daten: Gewicht}
+  \label{input_data_weight}
+ \end{figure}
+
+
  
  \section{Skelettbilder}
  \label{appendix_pca_skeletons}
