--- a/latex/pca.tex
+++ b/latex/pca.tex
@@ -41,7 +41,7 @@
  \begin{itemize}
   \item Ein Bild mit der Seitenansicht des Skeletts.
   Darin wurde die Lage der Wirbelsäule und die Länge der Knochen der Vorder- und Hintergliedmaßen markiert, falls vorhanden.\\
-  (Die Quellen hierfür sind in Anhang \ref{appendix_pca_skeletons} zu finden.)
+  (Die Quellen der Bilder sind in Anhang \ref{appendix_pca_skeletons} zu finden.)
   
   \item Die Tierklasse, also ob das Tier ein Fisch, ein Amphib, ein Reptil oder ein Säugetier ist. Diese Daten lassen sich nicht auf einer kontinuierlichen Skala abbilden und sind deshalb nicht als Eingabedimension für die PCA geeignet. Sie wurden trotzdem erhoben, da sie für eine anderweitige Auswertung hilfreich sein könnten.
   
@@ -63,7 +63,7 @@
  Ist das geschehen kann die Lage der Wirbelsäule und die Länge der Knochen der Extremitäten annotiert werden.
  
  Die Lage der Wirbelsäule wird durch drei kubische Bézierkurven erfasst. Jeweils einer für Hals, Rücken und Schwanz. Hals und Rücken teilen sich einen Punkt und Rücken und Schwanz. Die Punkte an denen sie ineinander übergehen sind der Schultergürtel und der Beckengürtel.
- Das sind die ersten $20$ Eingabedimensionen für die PCA ($10$ zweidimensionale Punkte).
+ Das sind die ersten $20$ Eingabedimensionen für die PCA ($10$ zweidimensionale Punkte). Bei manchen Tieren ist kein Hals oder kein Schwanz vorhanden. In diesen Fällen werden die $3$ fehlenden Punkte jeweils mit dem ersten \bzw letzten Punkt des Rückens ersetzt.
  
  Zusätzlich wird jeweils durch eine Gerade im Bild die Länge des Ober- und Unterarms, der Hand, des Ober- und Unterschenkels und des Fußes eingetragen, falls vorhanden. Die Bezeichnung der Extremität als Arm oder Bein ist nur zur Unterschiedung zwischen Vorder- und Hinterextremitäten gedacht. Sie hat in keiner Weise etwas mit der Funktion der Gliedmaßen zu tun.
  
@@ -103,7 +103,7 @@
  %---------------------------------
  \section{Analyse der Eingabedaten}
  
- Der Mittelwert aller Eingabedaten ist in Abbildung \ref{mean_log_weight} visualisiert. Wie die bei der Datenerhebung ist hier die Position der Wirbelsäule auf einem $1000 \times 1000$ Pixel Bild gezeigt. Da von den Knochen der Beine und Arme nur die Längen erhoben wurden, sind ihre Positionen nicht realistisch. Die Ober- und Unterschenkel und die Ober- und Unterarme, sind von den Übergangspunkten Hals-Rücken und Rücken-Schwanz senkrecht nach unten gezeichnet, Hand und Fuß sind vom jeweiligen Endpunkt von Arm oder Bein horizontal nach links gezeichnet. Die restlichen Daten sind nicht visualisiert, sondern nur in Textform in der oberen linken Ecke angegeben.
+ Insgesamt wurden $44$ Datenpunkte erhoben. Der Mittelwert aller Eingabedaten ist in Abbildung \ref{mean_log_weight} visualisiert. Wie die bei der Datenerhebung ist hier die Position der Wirbelsäule auf einem $1000 \times 1000$ Pixel Bild gezeigt. Da von den Knochen der Beine und Arme nur die Längen erhoben wurden, sind ihre Positionen nicht realistisch. Die Ober- und Unterschenkel und die Ober- und Unterarme, sind von den Übergangspunkten Hals-Rücken und Rücken-Schwanz senkrecht nach unten gezeichnet, Hand und Fuß sind vom jeweiligen Endpunkt von Arm oder Bein horizontal nach links gezeichnet. Die restlichen Daten sind nicht visualisiert, sondern nur in Textform in der oberen linken Ecke angegeben.
  
  \begin{figure}
   \centering
@@ -134,73 +134,41 @@
   \label{schwan_farbig}
  \end{figure}
  
- Es gibt $7$ Datenpunkte mit Flügeln und $37$ ohne Flügel. In den Visualisierungen der Eingabedaten (siehe Abbildungen \ref{input_data_spine}, \ref{input_data_lengths} und \ref{input_data_weight}) ist zu sehen, dass die Tiere mit Flügeln zwar kein Cluster bilden, aber doch meist nahe zusammen liegen. Nach der Koordinatentransformation durch die PCA bilden sie ein Cluster (siehe Abschnitt \ref{section_pca_result_analysis}). \todo{andere Daten taggen? Anzahl Beine mit Bodenkontakt, Tierklasse}
+ Es gibt $7$ Datenpunkte mit Flügeln und $37$ ohne Flügel. In den Visualisierungen der Eingabedaten (siehe Anhang \ref{appendix_pca}, Abbildungen \ref{input_data_spine}, \ref{input_data_lengths} und \ref{input_data_weight}) ist zu sehen, dass die Tiere mit Flügeln zwar kein Cluster bilden, aber doch meist nahe zusammen liegen. Nach der Koordinatentransformation durch die PCA bilden sie ein Cluster (siehe Abschnitt \ref{section_pca_result_analysis}). \todo{andere Daten taggen? Anzahl Beine mit Bodenkontakt, Tierklasse}
 
  Das Gewicht der Eingabedaten ist nicht normalverteilt (siehe Abbildung \ref{gnuplot_weight}), aber auf einer logarithmischen Skala schon (siehe Abbildung \ref{gnuplot_log_weight}). \todo{QQ Diagramme verstehen und programmieren}
  Bei linearem Gewicht als Eingabe für die PCA treten dadurch bei der Kombination von zufälligen Werten für die Eigenvektoren schnell Gewichte kleiner null auf. Dies wird bei einer logarithmischen Skala vermieden.
  Welcher Logarithmus zur Umrechnung der Daten verwendet wird schlägt sich nur als linearer Faktor nieder. Da hier wiederum nicht ersichtlich ist welche Skalierung am besten wäre, wurde hier der Zehnerlogarithmus verwendet.
-
-  
-  \begin{figure}
-   \subfloat[Erster Punkt des Halses]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_neck1.pdf}}
-   \qquad
-   \subfloat[Zweiter Punkt des Halses]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_neck2.pdf}}
-   \\
-   \subfloat[Dritter Punkt des Halses]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_neck3.pdf}}
-   \qquad
-   \subfloat[Vierter Punkt des Halses \bzw erster Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_back1.pdf}}
-   \\
-   \subfloat[Zweiter Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_back2.pdf}}
-   \qquad
-   \subfloat[Dritter Punkt des Rückens]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_back3.pdf}}
-  \end{figure}
-   
-  \begin{figure}
-   \ContinuedFloat
-   \subfloat[Vierter Punkt des Rückens \bzw erster Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_back4.pdf}}
-   \qquad
-   \subfloat[Zweiter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_tail2.pdf}}
-   \\
-   \subfloat[Dritter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_tail3.pdf}}
-   \qquad
-   \subfloat[Vierter Punkt des Schwanzes]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_tail4.pdf}}
-   
-   \caption{Erhobene Daten: Punkte der Bézierkurven der Wirbelsäule}
-   \label{input_data_spine}
-  \end{figure}
-
-  \begin{figure}
-   \subfloat[Länge Ober- und Unterarm]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_upper+lowerArm.pdf}}
-   \qquad
-   \subfloat[Länge Unterarm und Hand]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_lowerArm+hand.pdf}}
-   \\
-   \subfloat[Länge Ober- und Unterschenkel]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_upper+lowerLeg.pdf}}
-   \qquad
-   \subfloat[Länge Unterschenkel und Fuß]{\includegraphics[width=0.5\textwidth]{../PCA/gnuplot/results/input_lowerLeg+foot.pdf}}
-   
-   \caption{Erhobene Daten: Längen der Extremitäten. Gegeneinander sind jeweils abgetragen Ober- und Unterarm, Ober- und Unterschenkel, Unterarm und Hand, Unterschenkel und Fuß.}
-   \label{input_data_lengths}
-  \end{figure}
- 
- \begin{figure}
-  \centering
-  \subfloat[lineare Skala]{\includegraphics[width=0.8\textwidth]{../PCA/gnuplot/results/input_weight.pdf} \label{gnuplot_weight}}
-  \\
-  \subfloat[logarithmische Skala]{\includegraphics[width=0.8\textwidth]{../PCA/gnuplot/results/input_weight_logarithmic.pdf}\label{gnuplot_log_weight}}
-  
-  \caption{Erhobene Daten: Gewicht}
-  \label{input_data_weight}
- \end{figure}
-
  
 
-
-
- 
- 
  %- - - - - - - - - - - - - - - - - -
  \section{Analyse der PCA-Ergebnisse}
  \label{section_pca_result_analysis}
+ 
+ Von $29$ Eingabedimensionen gibt es auch $29$ Eigenvektoren mit Eigenwerten größer $0$. Der kleinste hat einen Wert von $0,000024$. Von den Eigenwerten sind $7$ größer als $0,01$. Leider reichen diese $7$ Dimensionen aber noch nicht aus, um die Eingabedaten hinreichend anzunähern. Bei manchen Tieren funktioniert das ganz gut (siehe Archaeopteryx, Abbildung \ref{archaeopteryx}), bei anderen aber eher schlechter (siehe Frosch, Abbildung \ref{frosch}).
+ 
+ \begin{figure}
+  \centering
+  \subfloat[Rekonstruktion]{\includegraphics[width=\textwidth]{../PCA/animal_reconstructions_log_weight/Archaeopteryx.jpg}}
+  \\
+  \subfloat[Eingabebild]{\includegraphics[width=0.5\textwidth]{../PCA/Skelettbilder/Archaeopteryx_farbig.png}}
+  
+  \caption{Archaeopteryx (a) Rekonstruktion aus den größten $7$ Eigenvektoren, (b) Eingabebild, zusätzlich erhobene Daten sind:
+  Tierklasse: Vogel, Flügel, Paare von Beinen mit Bodenkontakt: $1$, ungefähres Gewicht: $1$kg}
+  \label{archaeopteryx}
+ \end{figure}
+ 
+\begin{figure}
+  \centering
+  \subfloat[Rekonstruktion]{\includegraphics[width=\textwidth]{../PCA/animal_reconstructions_log_weight/Frosch.jpg}}
+  \\
+  \subfloat[Eingabebild]{\includegraphics[width=0.5\textwidth]{../PCA/Skelettbilder/Frosch_farbig.png}}
+  
+  \caption{Frosch (a) Rekonstruktion aus den größten $7$ Eigenvektoren, (b) Eingabebild, zusätzlich erhobene Daten sind:
+  Tierklasse: Amphib, keine Flügel, Paare von Beinen mit Bodenkontakt: $2$, ungefähres Gewicht: $0,01$kg}
+  \label{frosch}
+ \end{figure}
+
 
  \begin{itemize}
   \item Eigenvektoren/-werte
@@ -210,5 +178,4 @@
   \item Möglichkeit PCA-Daten nach Flügel/nicht Flügel aufzuteilen (führt zu besserer Anpassung an Eingabedaten, aber keine Approximation an Datenpunkte zwischen Clustern) \todo{man könnte auch genauso gut anhand von anderen Merkmalen aufteilen}
  \end{itemize}
  
-
 
